--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,14 @@ repositories {
 
     mavenCentral()
     maven{
-        url "https://cloud.experitest.com/repo"
+        url "https://partners.experitest.com/repo"
     }
 }
 
 dependencies {
 
-    testCompile group: 'io.appium', name: 'java-client', version: '5.0.4'
-    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+    testCompile group: 'io.appium', name: 'java-client', version: '7.6.0'
+    testCompile group: 'org.testng', name: 'testng', version: '7.6.1'
     testCompile group: 'com.experitest', name: 'appium-seetest-extension', version: '+'
 
 }
